force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Account__c.field-meta.xml
<CustomField>
    <fullName>Sym_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing &amp; Admin Preferences</relationshipLabel>
    <relationshipName>E2E_Symphony_Billing_Admin_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>