force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Sym_Account_Number__c</fullName>
    <description>account number for payment method</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>