force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Admin_Fee_Basis__c.field-meta.xml
<CustomField>
    <fullName>Sym_Admin_Fee_Basis__c</fullName>
    <label>Admin Fee Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCPM or PMPM enrollment w/ discount sharing as % of savings</fullName>
                <label>PCPM / PMPM enrollment w/ discount sharing as % of savings</label>
            </value>
            <value>
                <fullName>Per claim or as % of claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>