force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Bank_Name__c</fullName>
    <description>The Bank Name for the payment method</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>