force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Bill_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Sym_Bill_Delivery__c</fullName>
    <label>Bill Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Bill</fullName>
            </value>
            <value>
                <fullName>Electronic Bill and Standard Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>