force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Number_of_Bills__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_Bills__c</fullName>
    <description>The number of bills the client will receive</description>
    <label>Number of Bills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Bill</fullName>
            </value>
            <value>
                <fullName>Separate Bills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>