force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Payment_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Payment_Account_Type__c</fullName>
    <description>The payment method account type</description>
    <label>Payment Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>