force-app/main/default/objects/Sym_Billing_Admin_Preferences__c/fields/Sym_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Sym_Routing_Number__c</fullName>
    <description>Routing number for Bank information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>